# flowmesh

./: README.md
.github/workflows/: flowmesh.yml
database/: gen_provider.py  list_providers.py
docs/: client.md  dblayout.md
flowmesh/client/: CMakeLists.txt  main.cpp
flowmesh/client/src/: client.cpp  client.h  utils.cpp  utils.h
flowmesh/server/: CMakeLists.txt  main.c  main.cpp
flowmesh/server/src/: callbacks.cpp  client.cpp  client.h  consumer.cpp  consumer.h  consumer_callbacks.cpp  database.cpp  database.h  manager_server.c  manager_server.cpp  manager_server.h  provider.cpp  provider.h  proxy_callbacks.c  proxy_callbacks.h  proxy_client.cpp  proxy_client.h  proxy_server.c  proxy_server.cpp  proxy_server.h  socks5.c  socks5.cpp  socks5.h  utils.h
playground/redis/: CMakeLists.txt  main.cpp
